--- a/notebooks/data_cleaning.ipynb
+++ b/notebooks/data_cleaning.ipynb
@@ -185,24 +185,24 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
+      "<class 'pandas.DataFrame'>\n",
       "RangeIndex: 10819 entries, 0 to 10818\n",
       "Data columns (total 11 columns):\n",
       " #   Column           Non-Null Count  Dtype  \n",
       "---  ------           --------------  -----  \n",
-      " 0   url              10819 non-null  object \n",
-      " 1   price            10789 non-null  object \n",
-      " 2   brand            10789 non-null  object \n",
-      " 3   model            10789 non-null  object \n",
+      " 0   url              10819 non-null  str    \n",
+      " 1   price            10789 non-null  str    \n",
+      " 2   brand            10789 non-null  str    \n",
+      " 3   model            10789 non-null  str    \n",
       " 4   year             10789 non-null  float64\n",
-      " 5   condition        10789 non-null  object \n",
-      " 6   transmission     10789 non-null  object \n",
-      " 7   body_type        9888 non-null   object \n",
-      " 8   fuel_type        10789 non-null  object \n",
-      " 9   engine_capacity  10789 non-null  object \n",
-      " 10  mileage          10789 non-null  object \n",
-      "dtypes: float64(1), object(10)\n",
-      "memory usage: 929.9+ KB\n"
+      " 5   condition        10789 non-null  str    \n",
+      " 6   transmission     10789 non-null  str    \n",
+      " 7   body_type        9888 non-null   str    \n",
+      " 8   fuel_type        10789 non-null  str    \n",
+      " 9   engine_capacity  10789 non-null  str    \n",
+      " 10  mileage          10789 non-null  str    \n",
+      "dtypes: float64(1), str(10)\n",
+      "memory usage: 929.9 KB\n"
      ]
     },
     {
@@ -682,7 +682,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.4"
+   "version": "3.14.3"
   }
  },
  "nbformat": 4,
